versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/ProjectileEnergyDomain.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalProjectileEnergyDomain
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function ProjectileEnergyDomainDefaultConst() &
      bind(C, name='ProjectileEnergyDomainDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ProjectileEnergyDomainDefaultConst

!! Create, default
function ProjectileEnergyDomainDefault() &
      bind(C, name='ProjectileEnergyDomainDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ProjectileEnergyDomainDefault

!! Create, general, const
function ProjectileEnergyDomainCreateConst( &
   min, &
   max, &
   unit, &
   unitSize &
) &
      bind(C, name='ProjectileEnergyDomainCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   real(c_double), value, intent(in) :: min
   real(c_double), value, intent(in) :: max
   integer(c_size_t), intent(in), value :: unitSize
   character(c_char), intent(in) :: unit(unitSize)
   type(c_ptr) :: handle
end function ProjectileEnergyDomainCreateConst

!! Create, general
function ProjectileEnergyDomainCreate( &
   min, &
   max, &
   unit, &
   unitSize &
) &
      bind(C, name='ProjectileEnergyDomainCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   real(c_double), value, intent(in) :: min
   real(c_double), value, intent(in) :: max
   integer(c_size_t), intent(in), value :: unitSize
   character(c_char), intent(in) :: unit(unitSize)
   type(c_ptr) :: handle
end function ProjectileEnergyDomainCreate

!! Assign
subroutine ProjectileEnergyDomainAssign(handleLHS, handleRHS) &
      bind(C, name='ProjectileEnergyDomainAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine ProjectileEnergyDomainAssign

!! Delete
subroutine ProjectileEnergyDomainDelete(handle) &
      bind(C, name='ProjectileEnergyDomainDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine ProjectileEnergyDomainDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function ProjectileEnergyDomainRead(handle, filename, filenameSize) &
      bind(C, name='ProjectileEnergyDomainRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ProjectileEnergyDomainRead

!! Write to file
function ProjectileEnergyDomainWrite(handle, filename, filenameSize) &
      bind(C, name='ProjectileEnergyDomainWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ProjectileEnergyDomainWrite

!! Print to standard output, in our prettyprinting format
function ProjectileEnergyDomainPrint(handle) &
      bind(C, name='ProjectileEnergyDomainPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ProjectileEnergyDomainPrint

!! Print to standard output, as XML
function ProjectileEnergyDomainPrintXML(handle) &
      bind(C, name='ProjectileEnergyDomainPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ProjectileEnergyDomainPrintXML

!! Print to standard output, as JSON
function ProjectileEnergyDomainPrintJSON(handle) &
      bind(C, name='ProjectileEnergyDomainPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ProjectileEnergyDomainPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: min
!! -----------------------------------------------------------------------------

!! Has
function ProjectileEnergyDomainMinHas(handle) &
      bind(C, name='ProjectileEnergyDomainMinHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ProjectileEnergyDomainMinHas

!! Get
function ProjectileEnergyDomainMinGet(handle) &
      bind(C, name='ProjectileEnergyDomainMinGet') &
      result(min)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double) :: min
end function ProjectileEnergyDomainMinGet

!! Set
subroutine ProjectileEnergyDomainMinSet(handle, min, minSize) &
      bind(C, name='ProjectileEnergyDomainMinSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: minSize
   character(c_char), intent(in) :: min(minSize)
end subroutine ProjectileEnergyDomainMinSet


!! -----------------------------------------------------------------------------
!! Metadatum: max
!! -----------------------------------------------------------------------------

!! Has
function ProjectileEnergyDomainMaxHas(handle) &
      bind(C, name='ProjectileEnergyDomainMaxHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ProjectileEnergyDomainMaxHas

!! Get
function ProjectileEnergyDomainMaxGet(handle) &
      bind(C, name='ProjectileEnergyDomainMaxGet') &
      result(max)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double) :: max
end function ProjectileEnergyDomainMaxGet

!! Set
subroutine ProjectileEnergyDomainMaxSet(handle, max, maxSize) &
      bind(C, name='ProjectileEnergyDomainMaxSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: maxSize
   character(c_char), intent(in) :: max(maxSize)
end subroutine ProjectileEnergyDomainMaxSet


!! -----------------------------------------------------------------------------
!! Metadatum: unit
!! -----------------------------------------------------------------------------

!! Has
function ProjectileEnergyDomainUnitHas(handle) &
      bind(C, name='ProjectileEnergyDomainUnitHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ProjectileEnergyDomainUnitHas

!! Get
function ProjectileEnergyDomainUnitGet(handle) &
      bind(C, name='ProjectileEnergyDomainUnitGet') &
      result(unit)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: unit
end function ProjectileEnergyDomainUnitGet

!! Set
subroutine ProjectileEnergyDomainUnitSet(handle, unit, unitSize) &
      bind(C, name='ProjectileEnergyDomainUnitSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: unitSize
   character(c_char), intent(in) :: unit(unitSize)
end subroutine ProjectileEnergyDomainUnitSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalProjectileEnergyDomain
